[package]
name = "teste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.3.0"
ffmpeg-next = "4.4.0"
flate2 = "1.0.22"
serde_json = "1.0.73"
serde = "1.0.132"
serde_derive = "1.0.132"
tar = "0.4.38"
rodio = "0.14.0"
[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
